# physics_ml

./: CLAUDE.md  Makefile  SETUP.md  main.py  pyproject.toml  readme.md  setup.sh  todo.md  utils.py  visualize_trajectories.ipynb
config/: eval.yaml  eval_PINN.yaml  train.yaml  train_PINN.yaml  train_RNN.yaml
config/LV/: eval_PINN.yaml  train_PINN.yaml  train_RNN.yaml
config/alexis/: eval_MLP.yaml  eval_Seq2SeqRNN.yaml  train_MLP.yaml  train_MLP_elu.yaml  train_MLP_gelu.yaml  train_MLP_relu.yaml  train_Seq2SeqRNN.yaml
data_processing/: datasets.py  generate_data.py  split_data.py
models/: AutoencoderRNN.py  MLP.py  PINN.py  Seq2SeqRNN.py  seq2seqmodule.py
