[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physics-ml"
version = "0.1.0"
description = "Neural Network Models for Learning ODE System Dynamics"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Physics ML Team" }
]
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "numpy>=1.24.0,<2.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "mlflow>=2.8.0",
    "PyYAML>=6.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "ipykernel>=6.0.0",
]

[tool.setuptools]
packages = ["models", "data_processing"]
